Style notification button

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -409,9 +409,8 @@ nav
 
         &.nav-notifications
           .nav-item
-            background-color: $color-background
+            +button-simple
             border-radius: 50%
-            color: $color-text
             padding: 4px
 
             &.active
