--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -7,7 +7,7 @@ $color-background-darker: darken($color-background, 60%)
 
 $color-text: #4d4e53
 $color-text-dark: $color-text
-$color-text-lighter: #ccc
+$color-text-strong: darken($color-text, 10%)
 $color-text-light: rgba($color-text, .8)
 $color-text-hint: rgba($color-text, .5)
 
