--- a/src/styles/_config_dark.sass
+++ b/src/styles/_config_dark.sass
@@ -7,7 +7,7 @@ $color-background-darker: darken($color-background, 60%)
 
 $color-text: #dddee3
 $color-text-dark: $color-text
-$color-text-lighter: #fff
+$color-text-strong: #fff
 $color-text-light: rgba($color-text, .8)
 $color-text-hint: rgba($color-text, .5)
 
