--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -549,6 +549,7 @@ body[data-context="post-edit"]
     font-size: 16px
 
   border-bottom: thin solid $color-background-dark
+  color: $color-text-strong
   font-size: 16px
   line-height: 1.5em
 
