--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -13,6 +13,9 @@
 a
   color: var(--community-theme-color, $color-primary)
 
+h1
+  font-size: 1.8em
+
 body[data-context='post-fullscreen']
   .d-header
     box-shadow: 0 0 15px 5px $color-background-dark
