--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -692,6 +692,12 @@ body[data-context="post-edit"]
 
       padding: 10px 10px 10px 25px
 
+      a
+        color: $color-text !important
+
+        &:hover
+          color: var(--community-theme-color, $color-primary) !important
+
       &.is-first
         border-color: $color-background-dark
 
