Post View: Better scaling for oembed media

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -20,6 +20,15 @@
     max-height: 600px
     max-width: 100%
 
+  iframe
+    min-height: 100px
+    height: 100%
+    width: 100%
+
+  &.oembed
+    height: calc((9/16) * 100vw - 280px)
+    max-height: 640px
+    overflow-y: auto
 
 $item-thumbnail-size: 80px
 
