--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -193,11 +193,19 @@
   justify-content: center
 
   #list-pagination
+    +media-xs
+      margin-left: initial
+      margin-right: auto
     margin-left: auto
+
   #list-stats
+    +media-xs
+      margin-right: initial
     margin-right: auto
 
   .list-search-provider
+    +media-xs
+      display: none
     margin-left: 5px
     margin-top: 3px
     height: 100%
