--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -200,7 +200,7 @@
 
   #list-stats
     +media-xs
-      margin-right: initial
+      display: none
     margin-right: auto
 
   .list-search-provider
