--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -123,6 +123,8 @@
 				i.pi-social-reddit
 
 	#item-comments
+		.item-commenting-on
+			span {{ _("Leave a comment on") }} #[strong {{ project.name }} - {{ node.name }}]
 		#comments-embed
 
 script.
