Style tweaks to sketchfab oembed

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -30,6 +30,11 @@
     max-height: 640px
     overflow-y: auto
 
+    .sketchfab-embed-wrapper
+      height: 100%
+      overflow: hidden
+      width: 100%
+
 $item-thumbnail-size: 90px
 
 .item-oembed-images
