A new file for semi-static placeholder of strings to be translated
This is tricky because these values can change.
However for things like communities summary (and perhaps description?)
we can have them translated this way.

--- a/src/templates/dillo/macros/_communities.pug
+++ b/src/templates/dillo/macros/_communities.pug
@@ -15,7 +15,7 @@ ul
 
 			.d-communities-info
 				span.title {{ community.name }}
-				span.summary {{ community.summary }}
+				span.summary {{ _( community.summary ) }}
 	| {% endfor %}
 
 	li.d-communities-suggest
