Index: Overflow tweaks for item details

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -249,6 +249,7 @@ $item-thumbnail-size: 90px
           text-decoration: underline
         text-decoration: none
         color: $color-text-light
+        display: inline-block
 
         &:hover
           color: var(--community-theme-color, $color-primary)
