Index: Only show community name when in main project

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -771,3 +771,7 @@ body[data-context="post-edit"]
 body.main-project
   .item-commenting-on
     display: flex
+
+  .list-hits-item
+    .item-community
+      display: inline-block
