--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -291,7 +291,7 @@ script.
 								'</a>' +
 							'</li>' +
 						'{{/is_link}}' +
-						'<li>' +
+						'<li class="item-community">' +
 							'<a class="js-follow-link" href="/c/{{ project.url }}">{{ project.name }}</a>' +
 						'</li>' +
 						'<li class="item-date">{{ created }}</li>' +
