--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -201,7 +201,7 @@
     padding-bottom: 10px
   display: flex
   align-items: center
-  justify-content: center
+  justify-content: flex-end
   padding-right: 12px
   padding-top: 8px
 
