Index: Align pagination to the right

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1154,8 +1154,7 @@ $wgt-dropdown-width: 150px
     list-style-type: none
     justify-content: flex-end
     padding: 0
-    margin: 8px 12px 0px 5px
-    margin: 0
+    margin: 0 0 0 10px
 
   &-item
     align-items: center
