Comments: Parse emojis on comments load

--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -203,4 +203,9 @@ script.
 		$.adaptiveBackground.run(options);
 	});
 
+	$('body').on('pillar:comments-loaded', function(){
+		var itemComments = document.getElementById('item-comments');
+		twemoji.parse(itemComments);
+	});
+
 	ga('send', 'pageview', location.pathname);
