--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -130,7 +130,7 @@ html(lang='en')
 
 							li.nav-notifications
 								a.nav-item#notifications-toggle(
-									title="Notifications",
+									title="{{ _('Notifications') }}",
 									data-toggle="tooltip",
 									data-placement="bottom")
 									i.pi-notifications-none.nav-notifications-icon
