item-title color on index to use theme

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -3,6 +3,7 @@
   font-family: $font-headings
   line-height: 1.3em
   text-decoration: none
+  transition: color 100ms ease-in-out
 
   em
     color: var(--community-theme-color, $color-primary)
