Comments: Own macro for render_comment
At the moment this is a copy-paste of the whole macro,
kinda silly since we only want to add links to the comment avatar/name.

But it will do for now.

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -697,6 +697,13 @@ body[data-context="post-edit"]
     .comments-list-title
       padding: 10px 25px
 
+    .comment-avatar
+      img
+        transition: transform 100ms ease-in-out
+
+        &:hover
+          transform: scale(1.1)
+
     .comment-container,
     .comment-reply-container
       +media-xs
