Add profile link in user dropdown
Also use actual url_for to link user profile in comment macro
and minor style tweaks

--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -169,6 +169,12 @@ html(lang='en')
 											| {{ _("Night Mode") }}
 									li
 										a(
+											href="{{ url_for('users.users_view', username=current_user.username) }}"
+											title="Profile")
+											i.pi-vcard
+											| {{ _("Profile") }}
+									li
+										a(
 											href="{{ url_for('settings.profile') }}"
 											title="Settings")
 											i.pi-cog
