--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -426,7 +426,7 @@ nav
           .nav-item
             +button-simple
             border-radius: 50%
-            padding: 4px
+            padding: 2px
 
             &.active
               background-color: var(--community-theme-color, $color-primary)
@@ -540,7 +540,7 @@ ul.dropdown-menu
     float: right
     margin: 0 10px
     padding: 6px 10px
-    width: auto
+    width: 120px
 
     &::placeholder
       color: $color-text-hint
@@ -859,6 +859,10 @@ a.beta
     height: $header-logo-size
     position: relative
     width: $header-logo-size
+    transition: transform 100ms ease-in-out
+
+    &:hover
+      transform: scale(1.05)
 
     img
       +position-center-translate
@@ -882,6 +886,10 @@ a.beta
     justify-content: center
     padding-left: 35px
     position: relative
+    transition: transform 100ms ease-in-out
+
+    &:hover
+      transform: scale(1.05)
 
     .title
       background-color: var(--community-theme-color, $color-primary)
