--- a/src/styles/_utils.sass
+++ b/src/styles/_utils.sass
@@ -66,7 +66,7 @@
 
 =button-simple
   background-color: $color-background-light
-  border: thin solid $color-background-dark
+  border: 3px solid $color-background-dark
   box-shadow: 0 1px 1px rgba(black, .1)
   color: $color-text
   transition: color 100ms ease-in-out, transform 100ms ease-in-out
